# domaincheck

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: main.rs
