[package]
name = "domaincheck"
version = "0.4.43"
edition = "2024"
authors = ["Sai Dutt G.V <gvs46@protonmail.com>", "github.com/pepa65"]
description = "Check domainname availability on CLI using RDAP (with WHOIS fallback)"
license = "MIT"
repository = "https://github.com/pepa65/domaincheck"
keywords = ["cli", "domain", "whois", "rdap", "availability"]
categories = ["command-line-utilities", "network-programming"]
documentation = "https://docs.rs/domaincheck"
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
openssl-sys = { version = "0.9.104", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
console = "0.16"
crossterm = "0.29.0"
lazy_static = "1.4.0"
ctrlc = "3.4"
ratatui = "0.29.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
